--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon .\\dist\\index.js"
+    "dev": "nodemon --inspect dist/index.js"
   },
   "dependencies": {
     "express": "^4.18.2"
